# sbpf-verify

./: Cargo.toml  README.md
.github/workflows/: main.yml
client/: Cargo.toml
client/src/: instruction.rs  lib.rs
interface/: Cargo.toml
interface/src/: error.rs  instruction.rs  lib.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/tests/: perf.rs  setup.rs  verify.rs
scripts/: build-test-programs.sh
src/: error.rs  instruction.rs  lib.rs  processor.rs
test-programs/hello-world/: Cargo.toml
test-programs/hello-world/src/: lib.rs
tests/: setup.rs  verify.rs
verify/: Cargo.toml
verify/src/: elf.rs  error.rs  lib.rs  verify.rs
