[package]
name = "sbpf-verify"
version = "0.1.0"
edition = "2021"

[package.metadata.solana]
program-id = "SBPFVerify111111111111111111111111111111111"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.3"
getrandom = { version = "0.2.15", features = ["custom"] }
num-derive = "0.3"
num-traits = "0.2"
solana-account-info = "2.2"
solana-decode-error = "2.2"
solana-instruction = "2.2"
solana-msg = "2.2"
solana-package-metadata = "2.2"
solana-program-entrypoint = "2.2"
solana-program-error = "2.2"
solana-pubkey = "2.2"
solana-sbpf = "0.10.0"
thiserror = "1.0"

[dev-dependencies]
mollusk-svm = "0.1.0"
solana-account = "2.2"
solana-rent = "2.2"

[features]
bpf-entrypoint = []
test-sbf = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
