[workspace]
members = [
    "client",
    "interface",
    "program",
]
resolver = "2"

[workspace.dependencies]
bincode = "1.3.3"
bytemuck = "1.21.0"
getrandom = { version = "0.2.15", features = ["custom"] }
mollusk-svm = "0.1.1"
num-derive = "0.3"
num-traits = "0.2"
pinocchio = "0.7.1"
pinocchio-pubkey = "0.2.2"
sbpf-verify = { path = "program", version = "0.1.0" }
sbpf-verify-client = { path = "client", version = "0.1.0" }
sbpf-verify-interface = { path = "interface", version = "0.1.0" }
solana-account = "2.2"
solana-account-info = "2.2"
solana-decode-error = "2.2"
solana-instruction = "2.2"
solana-msg = "2.2"
solana-package-metadata = "2.2"
solana-program-entrypoint = "2.2"
solana-program-error = "2.2"
solana-pubkey = "2.2"
solana-rent = "2.2"
solana-sbpf = "0.10.0"
thiserror = "1.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
