[package]
name = "sbpf-verify-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
num-derive = { workspace = true }
num-traits = { workspace = true }
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
