[package]
name = "sbpf-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
getrandom = { workspace = true }
pinocchio = { workspace = true }
sbpf-verify-interface = { workspace = true }
solana-sbpf = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
sbpf-verify-client = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }

[features]
bpf-entrypoint = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
