[package]
name = "solana-sbpf-verify"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
byteorder = { workspace = true }
hash32 = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
